--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
     background-image: url("/wallpaper.jpg");
-    background-color: #E91E63;
+    background-color: rgba(2, 104, 186, 1);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
